--- a/webapp/index.html
+++ b/webapp/index.html
@@ -18,9 +18,10 @@
 	<script src="https://sap.github.io/openSAP-ui5-course/Validator.js"></script>
 	<script>
 		sap.ui.getCore().attachInit(function () {
-			sap.ui.xmlview({
-				viewName: "opensap.myapp.view.App"
+			new sap.ui.core.ComponentContainer({
+				name : "opensap.myapp"
 			}).placeAt("content");
+
 		});
 	</script>
 </head>
